[package]
name = "listdb-engine"
version = "0.1.0"
authors = ["John Hallat <jhallat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = "0.4"
log = "0.4.8"
env_logger = "0.7.1"
